CorsairSDK/SDK/Reference/iCUESDK.h


typedef char CorsairDeviceId[CORSAIR_STRING_SIZE_M];
typedef unsigned int CorsairLedLuid;
enum CorsairError 
{
	CE_Success = 0,               
	CE_NotConnected = 1,          
	CE_NoControl = 2,             
	CE_IncompatibleProtocol = 3,  
	CE_InvalidArguments = 4,      
	CE_InvalidOperation = 5,      
	CE_DeviceNotFound = 6,        
	CE_NotAllowed = 7             
};
enum CorsairSessionState 
{
	CSS_Invalid = 0,              
	CSS_Closed = 1,               
	CSS_Connecting = 2,           
	CSS_Timeout = 3,              
	CSS_ConnectionRefused = 4,    
	CSS_ConnectionLost = 5,       
	CSS_Connected = 6             
};
enum CorsairDeviceType 
{
	CDT_Unknown = 0x0000,           
	CDT_Keyboard = 0x0001,          
	CDT_Mouse = 0x0002,             
	CDT_Mousemat = 0x0004,          
	CDT_Headset = 0x0008,           
	CDT_HeadsetStand = 0x0010,      
	CDT_FanLedController = 0x0020,  
	CDT_LedController = 0x0040,     
	CDT_MemoryModule = 0x0080,      
	CDT_Cooler = 0x0100,            
	CDT_Motherboard = 0x0200,       
	CDT_GraphicsCard = 0x0400,      
	CDT_Touchbar = 0x0800,          
	CDT_All = 0xFFFFFFFF            
};
enum CorsairEventId 
{
	CEI_Invalid = 0, 
	CEI_DeviceConnectionStatusChangedEvent = 1,
	CEI_KeyEvent = 2
};
enum CorsairMacroKeyId 
{
	CMKI_Invalid = 0,
	CMKI_1 = 1,
	CMKI_2 = 2,
	CMKI_3 = 3,
	CMKI_4 = 4,
	CMKI_5 = 5,
	CMKI_6 = 6,
	CMKI_7 = 7,
	CMKI_8 = 8,
	CMKI_9 = 9,
	CMKI_10 = 10,
	CMKI_11 = 11,
	CMKI_12 = 12,
	CMKI_13 = 13,
	CMKI_14 = 14,
	CMKI_15 = 15,
	CMKI_16 = 16,
	CMKI_17 = 17,
	CMKI_18 = 18,
	CMKI_19 = 19,
	CMKI_20 = 20
}
enum CorsairDevicePropertyId 
{
	CDPI_Invalid = 0,                     
	CDPI_PropertyArray = 1,               
	CDPI_MicEnabled = 2,                  
	CDPI_SurroundSoundEnabled = 3,        
	CDPI_SidetoneEnabled = 4,             
	CDPI_EqualizerPreset = 5,             
	CDPI_PhysicalLayout = 6,              
	CDPI_LogicalLayout = 7,               
	CDPI_MacroKeyArray = 8,               
	CDPI_BatteryLevel = 9,                
	CDPI_ChannelLedCount = 10,            
	CDPI_ChannelDeviceCount = 11,         
	CDPI_ChannelDeviceLedCountArray = 12, 
	CDPI_ChannelDeviceTypeArray = 13      
};
enum CorsairDataType 
{
	CT_Boolean = 0,          
	CT_Int32 = 1,            
	CT_Float64 = 2,          
	CT_String = 3,           
	CT_Boolean_Array = 16,   
	CT_Int32_Array = 17,     
	CT_Float64_Array = 18,   
	CT_String_Array = 19     
};
enum CorsairPropertyFlag 
{
	CPF_None = 0x00,
	CPF_CanRead = 0x01,     
	CPF_CanWrite = 0x02,    
	CPF_Indexed = 0x04      
};
enum CorsairPhysicalLayout 
{
	CPL_Invalid = 0,
	CPL_US = 1,
	CPL_UK = 2,
	CPL_JP = 3,
	CPL_KR = 4,
	CPL_BR = 5
};
enum CorsairLogicalLayout 
{
	CLL_Invalid = 0,
	CLL_US_Int = 1,
	CLL_NA = 2,
	CLL_EU = 3,
	CLL_UK = 4,
	CLL_BE = 5,
	CLL_BR = 6,
	CLL_CH = 7,
	CLL_CN = 8,
	CLL_DE = 9,
	CLL_ES = 10,
	CLL_FR = 11,
	CLL_IT = 12,
	CLL_ND = 13,
	CLL_RU = 14,
	CLL_JP = 15,
	CLL_KR = 16,
	CLL_TW = 17,
	CLL_MEX = 18
};
enum CorsairChannelDeviceType 
{
	CCDT_Invalid = 0,
	CCDT_HD_Fan = 1,
	CCDT_SP_Fan = 2,
	CCDT_LL_Fan = 3,
	CCDT_ML_Fan = 4,
	CCDT_QL_Fan = 5,
	CCDT_8LedSeriesFan = 6,
	CCDT_Strip = 7,
	CCDT_DAP = 8,
	CCDT_Pump = 9,
	CCDT_DRAM = 10,
	CCDT_WaterBlock = 11
};
enum CorsairAccessLevel 
{
	CAL_Shared = 0,                                         
	CAL_ExclusiveLightingControl = 1,                       
	CAL_ExclusiveKeyEventsListening = 2,                    
	CAL_ExclusiveLightingControlAndKeyEventsListening = 3   
};
struct CorsairVersion 
{
	int major;
	int minor;
	int patch;
};
struct CorsairSessionDetails 
{
	CorsairVersion clientVersion;       
	CorsairVersion serverVersion;       
	CorsairVersion serverHostVersion;   
};
struct CorsairSessionStateChanged 
{
	CorsairSessionState state;       
	CorsairSessionDetails details;   
};
struct CorsairDeviceInfo 
{
	CorsairDeviceType type;                
	CorsairDeviceId id;                    
	char serial[CORSAIR_STRING_SIZE_M];    
	char model[CORSAIR_STRING_SIZE_M];     
	int ledCount;                          
	int channelCount;                      
};
struct CorsairLedPosition 
{
	CorsairLedLuid id;    
	double cx;            
	double cy;            
};
struct CorsairDeviceFilter 
{
	int deviceTypeMask;  
};
struct CorsairDeviceConnectionStatusChangedEvent 
{
	CorsairDeviceId deviceId; 
	bool isConnected;         
};
struct CorsairKeyEvent 
{
	CorsairDeviceId deviceId; 
	CorsairMacroKeyId keyId;  
	bool isPressed;           
};
struct CorsairEvent 
{
	CorsairEventId id; 
	union
	{
		const CorsairDeviceConnectionStatusChangedEvent *deviceConnectionStatusChangedEvent; 
		const CorsairKeyEvent *keyEvent; 
	};
};
struct CorsairDataType_BooleanArray 
{
	bool *items;          
	unsigned int count;   
};
struct CorsairDataType_Int32Array 
{
	int *items;           
	unsigned int count;   
};
struct CorsairDataType_Float64Array 
{
	double *items;        
	unsigned int count;   
};
struct CorsairDataType_StringArray 
{
	char **items;         
	unsigned int count;   
};
union CorsairDataValue 
{
	bool boolean;                                
	int int32;                                   
	double float64;                              
	char* string;                                
	CorsairDataType_BooleanArray boolean_array;  
	CorsairDataType_Int32Array int32_array;      
	CorsairDataType_Float64Array float64_array;  
	CorsairDataType_StringArray string_array;    
};
struct CorsairProperty 
{
	CorsairDataType type;    
	CorsairDataValue value;  
};
struct CorsairLedColor 
{
	CorsairLedLuid id;   
	unsigned char r;     
	unsigned char g;     
	unsigned char b;     
	unsigned char a;     
};
struct CorsairKeyEventConfiguration 
{
	CorsairMacroKeyId keyId;  
	bool isIntercepted;       
};
typedef void(*CorsairSessionStateChangedHandler)(void *context, const CorsairSessionStateChanged *eventData);
CORSAIR_ICUE_SDK_EXPORT CorsairError CorsairConnect(CorsairSessionStateChangedHandler onStateChanged, void *context);
CORSAIR_ICUE_SDK_EXPORT CorsairError CorsairGetSessionDetails(CorsairSessionDetails *details);
CORSAIR_ICUE_SDK_EXPORT CorsairError CorsairDisconnect();